[package]
name = "hardest-game-ever"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
axum = "0.8.1"
macroquad = "0.4.13"
minreq = { version = "2.13.2", features = ["https-rustls"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["full"] }
